# FastAPI-authorisation-practice

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
alembic/: env.py
alembic/versions/: 0d38e6fda5fd_test_migration.py  0dbc32540e24_initial_migration.py  8a47f639fd08_initial_migration.py  cf8377e88450_test_migration_2.py
app/: auth_handlers.py  config.py  database.py  main.py  models.py  routes.py
app/core/: config.py  database.py
app/models/postgres/: user_models.py
app/repositories/: user_repo.py
app/routes/: app_info_routes.py  auth_routes.py  user_routes.py
app/schemas/: auth_schema.py  user_schema.py
app/services/: auth_service.py  user_service.py
